--- a/views/main.erb
+++ b/views/main.erb
@@ -1,4 +1,4 @@
-<img id="welcome" src="images/welcome.jpg" height="35" width="195" alt="Welcome, guest!" />
+<img id="welcome" src="images/welcome.jpg" height="35" width="195" alt="Welcome, guest!!" />
 
 <p>Thanks for stopping by AMC Coordinator. If you've been here before please use the form below to sign in. If this
 is your first time <a href="#">take a tour</a> of features and <a href="#">create an account</a>. Once you have signed up you willl need to wait
