--- a/views/main.erb
+++ b/views/main.erb
@@ -6,12 +6,12 @@ for your new account status to be approved.</p>
 
 <div id="login-outer">
 	<div id="login-inner">
-		<form method="post" action="/">
+		<form method="post" action="/account">
 			<div id="user">
-				<input type="text" name="user-input" id="user-input">
+				<input type="text" name="username" id="username">
 			</div>
 			<div id="pass">
-				<input type="password" name="user-pass" id="user-pass">
+				<input type="password" name="userpass" id="userpass">
 			</div>
 			<input type="image" src="images/login.jpg" id="login-button" alt="Login">
 		</form>
