--- a/views/account.erb
+++ b/views/account.erb
@@ -3,7 +3,7 @@
 <p>Now that we have you here:</p>
 
 <ul>
-	<li><a href="#">View Your Events</a></li>
+	<li><a href="/account/view">View Your Events</a></li>
 	<li><a href="#">Request Switch</a></li>
 	<li><a href="#">Edit Settings</a></li>
 </ul>
