--- a/views/main.erb
+++ b/views/main.erb
@@ -6,7 +6,7 @@ for your new account status to be approved.</p>
 
 <div id="login-outer">
 	<div id="login-inner">
-		<form method="post" action="/account">
+		<form method="post" action="/account/">
 			<div id="user">
 				<input type="text" name="username" id="username">
 			</div>
