--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>AMC Coordinator - <%= pagetitle %> </title>
+<title>AMC Coordinator</title>
 </head>
 <link rel="stylesheet" type="text/css" href="/style.css" />
 <body>
