--- a/views/account.erb
+++ b/views/account.erb
@@ -3,8 +3,8 @@
 <p>Now that we have you here:</p>
 
 <ul>
-	<li><a href="/account/view/">View Your Events</a></li>
-	<li><a href="/account/view/all/">View All Events</a></li>
-	<li><a href="/account/switch/">Request Switch</a></li>
-	<li><a href="/account/settings/">Edit Settings</a></li>
+	<li><a href="/account/view">View Your Events</a></li>
+	<li><a href="/account/view/all">View All Events</a></li>
+	<li><a href="/account/switch">Request Switch</a></li>
+	<li><a href="/account/settings">Edit Settings</a></li>
 </ul>
