--- a/views/settings.erb
+++ b/views/settings.erb
@@ -1,3 +1,23 @@
 <h1>Account Settings</h1>
 
 <p>Change account level settings:</p>
+
+<form id="settings" method="POST" action="/account/settings">
+	<div class='item'>
+		<h3>First Name</h3>
+		<input type="text" name="first" value="<%= @user.first_name %>" />
+	</div>
+	<div class='item'>
+		<h3>Last Name</h3>
+		<input type="text" name="last" value="<%= @user.last_name %>" />
+	</div>
+	<div class='item'>
+		<h3>Email</h3>
+		<input type="text" name="email" value="<%= @user.email %>" />
+	</div>
+	<div class='item'>
+		<h3>Password</h3>
+		<input type="text" name="password" />
+	</div>
+	<input id="ss" type="submit" value="Change Settings" />
+</form>
