add link to logo

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="/style.css" />
 <body>
 <div id="container">
-	<img src="/images/logo.png" height="77" width="320" alt="AMC Coordinator - Coordination through Communication" />
+	<a href="/account"><img border="0" src="/images/logo.png" height="77" width="320" alt="AMC Coordinator - Coordination through Communication" /></a>
 	<% if @user %>
 		<ul id="nav">
 			<li<% if active == 'view' %> class="active"<% end %>><a href="/account/view">Your Events</a></li>
