Changes to page relations and navigation layout

--- a/views/account.erb
+++ b/views/account.erb
@@ -3,6 +3,7 @@
 <h2>Dashboard</h2>
 
 <ul>
+	<li><a href="/account/signup">Sign up for Events</a></li>
 	<li><a href="/account/view">View Your Events</a></li>
 	<li><a href="/account/view/all">View All Events</a></li>
 	<li><a href="/account/switch">Request Switch</a></li>
@@ -13,6 +14,8 @@
 <h2>Administration</h2>
 	<ul>
 		<li><a href="/admin/add">Add Event</a></li>
-		<li><a href="/admin/view">View Events</a></li>
+		<li><a href="/admin/schedule">Schedule</a></li>
+		<li><a href="/admin/statistics">Statistics</a></li>
+		<li><a href="/admin/settings">Settings</a></li>
 	</ul>		
 <% end %>
