--- a/public/style.css
+++ b/public/style.css
@@ -70,22 +70,22 @@ img#welcome {
 	width:240px;
 	margin:0 auto;
 	margin-top:25px;
-	border:1px solid #61b4cf;
+	/*border:1px solid #61b4cf;
 	-moz-border-radius:10px;
 	-webkit-border-radius:10px;
-	border-radius:10px;
+	border-radius:10px;*/
 	padding:15px;
-	background:#61b4cf;
+	/*background:#61b4cf;*/
 }
 
 #login-inner {
 	min-height:115px;
 	padding:15px;
 	background:#FFF;
-	border:1px solid #61b4cf;
+	/*border:1px solid #61b4cf;
 	-moz-border-radius:10px;
 	-webkit-border-radius:10px;
-	border-radius:10px;
+	border-radius:10px;*/
 }
 
 #user {
