--- a/views/account.erb
+++ b/views/account.erb
@@ -4,7 +4,7 @@
 
 <ul>
 	<li><a href="/account/signup">Sign up for Events</a></li>
-	<li><a href="/account/view">View Your Events</a></li>
+	<li><a href="/account/view">View Your Schedule</a></li>
 	<li><a href="/account/view/all">View All Events</a></li>
 	<li><a href="/account/settings">Edit Settings</a></li>
 </ul>
