Modify the admin section

--- a/views/account.erb
+++ b/views/account.erb
@@ -12,9 +12,10 @@
 <% if @user.is_admin %>
 <h2>Administration</h2>
 	<ul>
-		<li><a href="/admin/add">Add Event</a></li>
-		<li><a href="/admin/schedule">Schedule</a></li>
-		<li><a href="/admin/statistics">Statistics</a></li>
-		<li><a href="/admin/settings">Settings</a></li>
+		<li><a href="/admin/ranges">Ranges</a></li>
+                <li><a href="/admin/add">Add Event</a></li>
+                <li><a href="/admin/schedule">Set Schedule</a></li>
+                <li><a href="/admin/statistics">Statistics</a></li>
+                <li><a href="/admin/settings">Settings</a></li>
 	</ul>		
 <% end %>
