--- a/views/admin.erb
+++ b/views/admin.erb
@@ -1,8 +1,6 @@
 <h1>Administration</h1>
 	<ul>
-		<li><a href="/admin/ranges">Ranges</a></li>
-		<li><a href="/admin/add">Add Event</a></li>
-		<li><a href="/admin/schedule">Set Schedule</a></li>
+		<li><a href="/admin/schedule">Schedule</a></li>
 		<li><a href="/admin/statistics">Statistics</a></li>
 		<li><a href="/admin/settings">Settings</a></li>
 	</ul>	
