changes to admin process

--- a/views/account.erb
+++ b/views/account.erb
@@ -13,7 +13,7 @@
 <h2>Administration</h2>
 	<ul>
                 <li><a href="/admin/schedule">Schedule</a></li>
-                <li><a href="/admin/statistics">Statistics</a></li>
+                <li><a href="/admin/statistics">User Stats</a></li>
                 <li><a href="/admin/settings">Settings</a></li>
 	</ul>		
 <% end %>
