--- a/views/admin.erb
+++ b/views/admin.erb
@@ -1,6 +1,6 @@
 <h1>Administration</h1>
 	<ul>
 		<li><a href="/admin/schedule">Schedule</a></li>
-		<li><a href="/admin/statistics">Statistics</a></li>
+		<li><a href="/admin/statistics">User Stats</a></li>
 		<li><a href="/admin/settings">Settings</a></li>
 	</ul>	
