added headers, jQuery, and new forms

--- a/views/admin.erb
+++ b/views/admin.erb
@@ -1,4 +1,4 @@
-<h1>Administration</h1>
+<img id="heading" src="/images/admin.jpg" height="28" width="174" alt="Administration" />
 	<ul>
 		<li><a href="/admin/schedule">Schedule</a></li>
 		<li><a href="/admin/statistics">User Stats</a></li>
