--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,8 +2,9 @@
 <html>
 <head>
 <title>AMC Coordinator</title>
-</head>
 <link rel="stylesheet" type="text/css" href="/style.css" />
+<script src="/js/jquery-1.6.1.min.js"></script>
+</head>
 <body>
 <div id="container">
 	<a href="/account"><img border="0" src="/images/logo.png" height="77" width="320" alt="AMC Coordinator - Coordination through Communication" /></a>
