--- a/views/signup.erb
+++ b/views/signup.erb
@@ -1,2 +1,2 @@
-<h1>Signup</h1>
-<p>Please select 4 events from the below list:</p>
+<img id="heading" src="/images/schedule.jpg" height="28" width="108" alt="Schedule" />
+<p>Please select a date range to view available events below:</p>
