--- a/views/view.erb
+++ b/views/view.erb
@@ -1,4 +1,3 @@
-<h1>View Your Events</h1>
-<p>Click on an event to view or request a switch.</p>
+<img id="heading" src="/images/your-events.jpg" height="27" width="135" alt="Your Events" />
 
 <a href="/account/view/all">View all events</a>
