--- a/public/style.css
+++ b/public/style.css
@@ -130,12 +130,48 @@ img#welcome {
 	margin-top:5px;
 }
 
+#settings {
+	margin-top:20px;
+}
+
 form#settings div.item {
 	margin:0 0 15px 15px;
+	width:350px;
+}
+
+form#settings div.item input {
+	float:right;
+	margin-top:-3px;
 }
 
 form#settings input#ss {
 	margin-left:15px;
+	margin-top:10px;
+}
+
+#toolbar {
+	text-align:right;
+	margin-bottom:-15px;
+	color:#61b4cf;
+}
+
+#bottombar {
+	color:#61b4cf;
+	margin-top:25px;
+	font-size:12px;
+}
+
+#toolbar a:link, #toolbar a:visited, #bottombar a:link, #bottombar a:visited {
+	color:#61b4cf !important;
+}
+
+#confirm {
+	margin-bottom:10px;
+	margin-top:-5px !important;
+	display:none;
+	color:#06799f;
+	font-size:20px;
+	font-weight:bold;
 }
 
 /* ------------- Typograhy ------------- */
@@ -176,5 +212,11 @@ h2 {
 	font-weight:bold;
 	margin-bottom:10px;
 }
+
+img#heading {
+	margin-bottom:15px;
+	display:block;
+}
+
 
 /* ----------- END Typograhy ----------- */
