--- a/public/style.css
+++ b/public/style.css
@@ -141,7 +141,7 @@ form#settings div.item {
 
 form#settings div.item input {
 	float:right;
-	margin-top:-3px;
+	width:200px;
 }
 
 form#settings input#ss {
