--- a/views/admin_schedule.erb
+++ b/views/admin_schedule.erb
@@ -1,5 +1,5 @@
 <div id="toolbar">
-	<a href="#">Add Range</a> | <a href="#">View Archives</a>
+	<a href="/admin/add/range">Add Range</a> | <a href="/admin/archives">View Archives</a>
 </div>
 
 <img id="heading" src="/images/schedule.jpg" height="28" width="105" alt="Schedule" />
