--- a/public/style.css
+++ b/public/style.css
@@ -269,4 +269,11 @@ img#heading {
 	margin-bottom:15px;
 }
 
+#monthTitle2 {
+	font-size:24px;
+	color:#06799f;
+	margin-top:-14px;
+	margin-bottom:15px;
+}
+
 /* ----------- END Typograhy ----------- */
