--- a/views/admin_add_range.erb
+++ b/views/admin_add_range.erb
@@ -1,3 +1,7 @@
+<div id="toolbar">
+	<a href="/admin/schedule">Back to Schedule</a>
+</div>
+
 <img id="heading" src="/images/create-date-range.jpg" height="34" width="212" alt="Create Date Range" />
 
 <p>Enter new date range below:</p>
