--- a/views/admin_monthly.erb
+++ b/views/admin_monthly.erb
@@ -1,5 +1,5 @@
 <div id="toolbar">
-	<a href="#">Add Event</a> | <a href="/admin/schedule">Back to Schedule</a>
+	<a href="/admin/add/event/r/<%= @month.erid %>">Add Event</a> | <a href="/admin/schedule">Back to Schedule</a>
 </div>
 
 <img id="heading" src="/images/monthly-schedule.jpg" height="34" width="206" alt="Monthly Schedule" />
