--- a/views/admin_schedule.erb
+++ b/views/admin_schedule.erb
@@ -22,7 +22,7 @@
 			<% if range.month == 12 %>December<% end %>
 			 <%= range.year %></a></td>
 			<td class="rangeED blueLink"><a href="/admin/edit/range/<%= range.erid %>">Edit</a> | <a href="/admin/delete/range/<%= range.erid %>">Delete</a></td>
-			<td class="rangeAdd blueLink"><a href="">Add Event</a></td>
+			<td class="rangeAdd blueLink"><a href="/admin/add/event/r/<%= range.erid %>">Add Event</a></td>
 			<td class="rangeEvents">Events: 0</td>
 			<td class="rangeStatus greenLink">Status: <a href="/admin/archive/range/<%= range.erid %>">Active</a></td>
 		</tr>
