--- a/views/admin_edit_range.erb
+++ b/views/admin_edit_range.erb
@@ -1,3 +1,7 @@
+<div id="toolbar">
+	<a href="/admin/schedule">Back to Schedule</a>
+</div>
+
 <img id="heading" src="/images/edit-range.jpg" height="35" width="182" alt="Edit Date Range" />
 
 <p>Edit date range below:</p>
