--- a/views/add.erb
+++ b/views/add.erb
@@ -34,7 +34,7 @@
 
 <div id="add-outer">
 	<div id="add-inner">
-		<form method="post" action="/admin/add/event/r/<%= @eventRange.erid %>">
+		<form method="post" action="/admin/add/event/r">
 			<input type="hidden" name="event_range_id" id="event_range_id" value="<%= @eventRange.erid %>">
 			<div>
 				Name <input type="text" name="event_name" id="event_name">
