--- a/views/admin_add_range.erb
+++ b/views/admin_add_range.erb
@@ -26,7 +26,7 @@
 	</div>
 	<div class='item'>
 		Year
-		<input type="text" name="year" value="" />
+		<input type="text" name="year" value="<%= @Time.year %>" />
 	</div>
 	<div class='item'>
 		Per User
