--- a/views/admin.erb
+++ b/views/admin.erb
@@ -1,6 +1,6 @@
 <img id="heading" src="/images/admin.jpg" height="28" width="174" alt="Administration" />
 	<ul>
 		<li><a href="/admin/schedule">Schedule</a></li>
-		<li><a href="/admin/statistics">User Stats</a></li>
-		<li><a href="/admin/settings">Settings</a></li>
+		<li><a href="/admin/users">Users</a></li>
+		<li><a href="/admin/positions">Positions</a></li>
 	</ul>	
