--- a/views/account.erb
+++ b/views/account.erb
@@ -1,19 +1,18 @@
 <h1>Welcome, <%= name %>!</h1>
 
 <h2>Dashboard</h2>
-
-<ul>
-	<li><a href="/account/signup">Sign up for Events</a></li>
-	<li><a href="/account/view">View Your Schedule</a></li>
-	<li><a href="/account/view/all">View All Events</a></li>
-	<li><a href="/account/settings">Edit Settings</a></li>
-</ul>
+	<ul>
+		<li><a href="/account/signup">Sign up for Events</a></li>
+		<li><a href="/account/view">View Your Schedule</a></li>
+		<li><a href="/account/view/all">View All Events</a></li>
+		<li><a href="/account/settings">Edit Settings</a></li>
+	</ul>
 
 <% if @user.is_admin %>
 <h2>Administration</h2>
 	<ul>
-                <li><a href="/admin/schedule">Schedule</a></li>
-                <li><a href="/admin/statistics">User Stats</a></li>
-                <li><a href="/admin/settings">Settings</a></li>
+        <li><a href="/admin/schedule">Schedule</a></li>
+        <li><a href="/admin/users">Users</a></li>
+        <li><a href="/admin/positions">Positions</a></li>
 	</ul>		
 <% end %>
