--- a/views/admin_schedule.erb
+++ b/views/admin_schedule.erb
@@ -23,7 +23,10 @@
 			 <%= range.year %></a></td>
 			<td class="rangeED blueLink"><a href="/admin/edit/range/<%= range.erid %>">Edit</a> | <a href="/admin/delete/range/<%= range.erid %>">Delete</a></td>
 			<td class="rangeAdd blueLink"><a href="/admin/add/event/r/<%= range.erid %>">Add Event</a></td>
-			<td class="rangeEvents">Events: 0</td>
+			<td class="rangeEvents">Events: 
+				<% e_count = Event.all(:event_range => range.erid) %>
+				<%= e_count.count %>
+			</td>
 			<td class="rangeStatus greenLink">Status: <a href="/admin/archive/range/<%= range.erid %>">Active</a></td>
 		</tr>
 	<% end %>
